Fix api plane creation documentation
